--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     </div>
   </div>
 
+  <script src="https://cdn.jsdelivr.net/npm/spark-md5@3.0.0/spark-md5.min.js"></script>
   <script src="script.js"></script>
 </body>
 
